2003-05-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	PR 321:
	* aclocal/check-bsp-cache.m4: Remove support for profile-variant.
	* aclocal/env-rtemsbsp.m4
	* automake/compile.am
	* automake/host.am
	* automake/local.am

2003-05-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/check-cxx.m4: Remove LIBSUFFIX_VA.
	* automake/compile.am: Remove LIBSUFFIX_VA.
	Merger from rtems-4-6-branch.

2003-04-17	Joel Sherrill <joel@OARcorp.com>

	* VERSION: Updated to rtems-ss-20030417.

2003-04-17	Joel Sherrill <joel@OARcorp.com>

	* aclocal/version.m4: Updated to rtems-ss-20030417.

2003-04-11	Joel Sherrill <joel@OARcorp.com>

	* VERSION: Updated to rtems-ss-20030411.

2003-04-11	Joel Sherrill <joel@OARcorp.com>

	* aclocal/version.m4: Updated to rtems-ss-20030411.

2003-04-11	Joel Sherrill <joel@OARcorp.com>

	* VERSION: Updated to rtems-ss-20020411.

2003-04-11	Joel Sherrill <joel@OARcorp.com>

	* aclocal/version.m4: Updated to rtems-ss-20020411.

2003-03-13	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* acinclude.m4: Reformat build_* handling.
	Preset *_alias if empty.
	* configure.ac: Change tools/build to build-config dirs.
	Conditionally build tools/build as host-config dirs.

2003-03-13	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* acinclude.m4: Fix broken comments.
	Add hidden option --enable-experimental.
	* README.cdn-X: Update.
	* configure.ac:	Build tools/build as host and build-host tools to
	accomodate those BSPs applying packhex in <BSP>.cfg.
	Build tools/cpu as build-host tools.

2003-03-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* tools/Makefile.am: Remove.
	* configure.ac: Remove tools.
	* acinclude.m4: Fix build_subdir handling.
	* Makefile.am: Remove tools from SUBDIRS.
	Rename HOST|BUILD|TARGET_SUBDIRS into host|build|target_SUBDIRS.

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.
	* alocal/rtems-top.a4: Add AC_CONFIG_AUX_DIR.

2003-02-28	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
