@@ -16,12 +16,4 @@ depend-am:
 depend: depend-am
 .PHONY: depend depend-am
 
-${ARCH}:
-	mkdir ${ARCH}
-
-clean-local:
-	$(RM) -r o-optimize o-debug $(CLEANDIRS)
-	$(RM) Depends-o-optimize.tmp Depends-o-debug.tmp
-
 PROJECT_TOOLS = $(PROJECT_RELEASE)/build-tools
-
