@@ -1,3 +1,7 @@
+2003-06-06      Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* automake/local.am: Remove $(ARCH), clean-local.
+
 2003-05-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	PR 321:
